[gd_scene load_steps=9 format=3 uid="uid://fa7nmgjpv5l6"]

[ext_resource type="Script" uid="uid://ccs00bgac7fhv" path="res://cards/scripts/card_ui.gd" id="1_uj0tt"]
[ext_resource type="Texture2D" uid="uid://bsrjo51m8ftxc" path="res://assets/Cards/template_card_2.png" id="2_uj0tt"]
[ext_resource type="Script" uid="uid://cqqnfqih7s1a7" path="res://cards/scripts/card_state_machine.gd" id="3_vxtg5"]
[ext_resource type="Script" uid="uid://ch0teiuvp4h1g" path="res://cards/card states/card_base_state.gd" id="4_e4wjq"]
[ext_resource type="Script" uid="uid://62vsvsqaq674" path="res://cards/card states/card_clicked_state.gd" id="5_kkkcn"]
[ext_resource type="Script" uid="uid://doffdfqqepprk" path="res://cards/card states/card_dragging_state.gd" id="6_gl2wu"]
[ext_resource type="Script" uid="uid://4unwo0j06wo5" path="res://cards/card states/card_released_state.gd" id="7_f0nnd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x102"]
size = Vector2(125, 183)

[node name="CardUI" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(140, 230)
layout_mode = 3
anchor_right = 0.122
anchor_bottom = 0.355
offset_right = -0.543747
offset_bottom = -0.0402222
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uj0tt")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -115.0
offset_right = 70.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_uj0tt")

[node name="Cost" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.737262
anchor_top = -0.235119
anchor_right = -0.437262
anchor_bottom = -0.125119
offset_left = 206.217
offset_top = 101.833
offset_right = 206.217
offset_bottom = 115.033
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.533333, 0.431373, 0.415686, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DropPointDetect" type="Area2D" parent="."]
process_mode = 3
visible = false
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetect"]
process_mode = 3
position = Vector2(68.5001, 138.5)
shape = SubResource("RectangleShape2D_5x102")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
process_mode = 3
script = ExtResource("3_vxtg5")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
process_mode = 3
script = ExtResource("4_e4wjq")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
process_mode = 3
script = ExtResource("5_kkkcn")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
process_mode = 3
script = ExtResource("6_gl2wu")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
process_mode = 3
script = ExtResource("7_f0nnd")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetect" to="." method="_on_drop_point_detect_area_entered"]
[connection signal="area_exited" from="DropPointDetect" to="." method="_on_drop_point_detect_area_exited"]
